--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "request-logger",
+  "name": "express-mini-logger",
   "version": "1.0.1",
   "description": "Simple middleware for logging your incoming express requests",
   "type": "commonjs",
